--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,10 +22,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Generates the snake
-      - uses: Platane/snk@master
+        - name: generate-snake-game-from-github-contribution-grid
+        uses: Platane/snk@v0.0.18
         id: snake-gif
         with:
           github_user_name: djswain09
