--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,52 +1,112 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
+name: snake
 
-name: Generate Snake
+on: [push]
 
-# Controls when the action will run. This action runs every 6 hours.
-
-on:
-  schedule:
-    # every 6 hours
-    - cron: "0 */6 * * *"
-
-  # This command allows us to run the Action automatically from the Actions tab.
-  workflow_dispatch:
-
-# The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  test:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-        - name: generate-snake-game-from-github-contribution-grid
-        uses: Platane/snk@v0.0.18
+      - run: sudo apt-get install gifsicle graphicsmagick
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+
+      - uses: bahmutov/npm-install@v1.7.8
+
+      - run: yarn type
+      - run: yarn lint
+      - run: yarn test --ci
+
+  test-benchmark:
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: sudo apt-get install gifsicle graphicsmagick
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+
+      - uses: bahmutov/npm-install@v1.7.8
+
+      - run: ( cd packages/gif-creator ; yarn benchmark )
+
+  test-action:
+    runs-on: ubuntu-latest
+    needs: build-docker-image
+
+    steps:
+      - name: generate-snake-game-from-github-contribution-grid
         id: snake-gif
+        uses: Platane/snk@master
         with:
           github_user_name: djswain09
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
+      - name: ensure the generated file exists
+        run: |
+          ls -l ${{ steps.snake-gif.outputs.gif_out_path }}
+          test -f ${{ steps.snake-gif.outputs.gif_out_path }}
 
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      - uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
 
+  deploy-ghpages:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+
+      - uses: bahmutov/npm-install@v1.7.8
+
+      - run: yarn build:demo
+        env:
+          GITHUB_USER_CONTRIBUTION_API_ENDPOINT: https://snk-one.vercel.app/api/github-user-contribution/
+
+      - uses: crazy-max/ghaction-github-pages@v2.5.0
+        if: success() && github.ref == 'refs/heads/master'
+        with:
+          target_branch: gh-pages
+          build_dir: packages/demo/dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
+
+  build-docker-image:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+
+      - uses: bahmutov/npm-install@v1.7.8
+
+      - run: yarn build:action
+
+      - uses: docker/setup-qemu-action@v1
+
+      - uses: docker/setup-buildx-action@v1
+
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - uses: docker/build-push-action@v2
+        id: docker_build
+        with:
+          push: ${{ github.ref == 'refs/heads/master' }}
+          tags: |
+            platane/snk:latest
+            platane/snk:${{ github.sha }}
+          file: packages/action/Dockerfile
+          context: packages/action
